<!--
  ~ Copyright (C) 2016 Florian Dreier
  ~
  ~ This file is part of MyTargets.
  ~
  ~ MyTargets is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License version 2
  ~ as published by the Free Software Foundation.
  ~
  ~ MyTargets is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".SetTargetsActivity">

    <item
        android:id="@+id/action_grouping"
        android:icon="@drawable/ic_bubble_chart_white_24px"
        android:title="@string/grouping"
        app:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/action_grouping_none"
                    android:checked="true"
                    android:title="@string/show_none"
                    app:showAsAction="never"/>
                <item
                    android:id="@+id/action_grouping_average"
                    android:title="@string/show_average"
                    app:showAsAction="never"/>
                <item
                    android:id="@+id/action_grouping_cluster"
                    android:title="@string/show_clusters"
                    app:showAsAction="never"/>
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/action_show"
        android:icon="@drawable/ic_visibility_white_24dp"
        android:title="@string/show_all"
        app:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/action_show_end"
                    android:checked="true"
                    android:title="@string/show_shots_end"
                    app:showAsAction="never"/>
                <item
                    android:id="@+id/action_show_round"
                    android:title="@string/show_shots_round"
                    app:showAsAction="never"/>
                <item
                    android:id="@+id/action_show_training"
                    android:title="@string/show_shots_training"
                    app:showAsAction="never"/>
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/action_show_sidebar"
        android:icon="@drawable/ic_grain_24dp"
        android:title="@string/timer"
        app:showAsAction="ifRoom|withText"/>
</menu>
