<de.dreier.mytargets.views.NotifyingScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.dreier.mytargets.activities.EditArrowActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="0dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/arrows"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:longClickable="true"
                android:scaleType="centerCrop" />

            <View
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gradient" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <com.iangclifton.android.floatlabel.FloatLabel
                android:id="@+id/arrow_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textNoSuggestions" />

            <com.iangclifton.android.floatlabel.FloatLabel
                android:id="@+id/arrow_length"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/length"
                android:inputType="textNoSuggestions" />

            <com.iangclifton.android.floatlabel.FloatLabel
                android:id="@+id/arrow_material"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/material"
                android:inputType="textNoSuggestions" />

            <com.iangclifton.android.floatlabel.FloatLabel
                android:id="@+id/arrow_spine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/spine"
                android:inputType="textNoSuggestions" />

            <com.iangclifton.android.floatlabel.FloatLabel
                android:id="@+id/arrow_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/weight"
                android:inputType="textNoSuggestions" />

            <com.iangclifton.android.floatlabel.FloatLabel
                android:id="@+id/arrow_vanes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/vanes"
                android:inputType="textNoSuggestions" />

            <com.iangclifton.android.floatlabel.FloatLabel
                android:id="@+id/arrow_point"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/point"
                android:inputType="textNoSuggestions" />

            <com.iangclifton.android.floatlabel.FloatLabel
                android:id="@+id/arrow_nock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nock"
                android:inputType="textNoSuggestions" />

            <com.iangclifton.android.floatlabel.FloatLabel
                android:id="@+id/arrow_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/comment"
                android:inputType="textNoSuggestions" />

        </LinearLayout>
    </LinearLayout>
</de.dreier.mytargets.views.NotifyingScrollView>
