<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2018 Florian Dreier
  ~
  ~ This file is part of MyTargets.
  ~
  ~ MyTargets is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License version 2
  ~ as published by the Free Software Foundation.
  ~
  ~ MyTargets is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_version_info"
        android:title="@string/version_info"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_open_source_licences"
        android:title="@string/licences"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_about"
        android:title="@string/about"
        app:showAsAction="never"/>

</menu>
